fixed alignment, modify handleFormSubmit method (#13)
* remove notes text file

* modify HTML and CSS to align text

* finish alignment of input form text

* clear input data on click

* refactor code

* add bootstrap and update button UI

* modernize passphrase input box

* center button and heading

* modernize UI

* modernize UI, alignment slightly off

* remove unnecessary css elements

* remove unneeded files, fix typo, update firebase.json file to match original

--- a/public/secret.css
+++ b/public/secret.css
@@ -1,14 +1,9 @@
-body {
-  font-family: sans-serif;
-}
-
 textarea {
-width: 320px;
-height: 200px;
+  width: 550px;
+  height: 150px;
 }
 
 .textbox {
- 
   margin-top: 80px;
   margin-bottom: 25px;
   margin-left: 200px;
@@ -20,50 +15,31 @@ label {
   justify-content: flex-end;
   width: 400px;
   line-height: 26px;
-  margin-left:125px;
+  margin-left: 125px;
   margin-bottom: 10px;
 }
 
-.password {
-  height: 1em;
-  flex: 0 0 200px;
-  margin-left: 32px;
+.form-select {
+  margin-left: 200px;
 }
 
-.accessLimit {
-  width: 3em;
-  height: 1em;
-  margin-left: 188px;
-
+.display-3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.timeExpiry {
-  width: 3em;
-  height: 1em;
-  margin-left: 195px;
-
+.btn {
+  margin: 0 auto;
+  display: block;
 }
 
-.timeLength {
-  margin-left: 455px;
-
+.form-control {
+  height: 1.5em;
+  flex: 0 0 325px;
 }
 
-.button{
-  margin-top: 20px;
-  margin-left: 350px;
+input {
+  text-align: center
 }
-h1 {
-  font-size: 50px;
-  margin-left: 20px;
-  display: inline;
-}
-
-
-h2 {
-  font-size: 20px;
-  margin-left: 400px;
-  display: inline;
-}
-
 
